--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "mysql": "^2.18.1",
     "react": "^16.6.0",
     "react-dom": "^16.6.0"
