--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "react-dev": "webpack -d --watch",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
