--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "mysql": "^2.18.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-star-ratings": "^2.3.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
