--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "App.js",
   "dependencies": {
     "axios": "^0.19.2",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
     "react": "^16.13.1",
