--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "axios": "^0.19.2",
     "cors": "^2.8.5",
+    "csv-write-stream": "^2.0.0",
     "express": "^4.17.1",
+    "faker": "^4.1.0",
     "mysql": "^2.13.0",
     "nodemon": "^2.0.4",
     "react": "^16.13.1",
