--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "description": "The review functionality of target page",
   "main": "index.js",
   "dependencies": {
+    "JSONStream": "^1.3.5",
     "axios": "^0.19.2",
+    "chalk": "^4.0.0",
     "cors": "^2.8.5",
     "csv-write-stream": "^2.0.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
+    "fs": "0.0.1-security",
     "mysql": "^2.13.0",
+    "ndjson": "^1.5.0",
     "nodemon": "^2.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-star-ratings": "^2.3.0"
+    "react-star-ratings": "^2.3.0",
+    "stream": "0.0.2"
   },
   "devDependencies": {
     "react-hot-loader": "^4.3.11",
