--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "fs": "0.0.1-security",
+    "mongoose": "^5.9.16",
     "mysql": "^2.13.0",
     "ndjson": "^1.5.0",
+    "newrelic": "^6.8.0",
     "nodemon": "^2.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -34,8 +36,8 @@
     "mini-css-extract-plugin": "^0.9.0"
   },
   "scripts": {
-    "dev": "webpack -d --w",
-    "start": "nodemon server.js"
+    "dev": "webpack -d ",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC"
